<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/regAvatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/avatar_bg"
        android:contentDescription="@string/profile_avatar"
        android:elevation="10dp"
        android:padding="5dp"
        android:src="@drawable/avatar_male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/regEtName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:background="@drawable/pill_bg"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="5dp"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regAvatar" />

    <EditText
        android:id="@+id/regEtEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="email"
        android:background="@drawable/pill_bg"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEtName" />

    <EditText
        android:id="@+id/regEtPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/pill_bg"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEtDob" />

    <EditText
        android:id="@+id/regEtPasswordConf"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:background="@drawable/pill_bg"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="5dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEtPassword" />

    <EditText
        android:id="@+id/regEtPhone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="phone"
        android:background="@drawable/pill_bg"
        android:drawableStart="@drawable/baseline_call_24"
        android:drawablePadding="5dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEtEmail" />

    <EditText
        android:id="@+id/regEtDob"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="birthday"
        android:background="@drawable/pill_bg"
        android:drawableStart="@drawable/baseline_calendar_month_24"
        android:drawablePadding="5dp"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regRgGender" />

    <RadioGroup
        android:id="@+id/regRgGender"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:gravity="center"
        android:checkedButton="@id/regRbMale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEtPhone"
        android:background="@drawable/pill_bg">

        <RadioButton
            android:id="@+id/regRbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/selector_radiobutton_color"
            android:buttonTint="@color/selector_radiobutton_color"
            android:text="@string/male"
            android:padding="5dp"
            />

        <RadioButton
            android:id="@+id/regRbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/selector_radiobutton_color"
            android:buttonTint="@color/selector_radiobutton_color"
            android:padding="5dp"
            android:text="@string/female"
            />

        <RadioButton
            android:id="@+id/regRbOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/selector_radiobutton_color"
            android:buttonTint="@color/selector_radiobutton_color"
            android:padding="5dp"
            android:text="@string/other"
            />

    </RadioGroup>

    <Button
        android:id="@+id/regBtnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#48bf53"
        android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEtPasswordConf" />

    <TextView
        android:id="@+id/regTvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account_login"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regBtnRegister" />





</androidx.constraintlayout.widget.ConstraintLayout>